[package]
name = "libarchive"
version = "0.1.1"
authors = ["Jamie Winsor <reset@chef.io>"]
license = "Apache-2.0"
repository = "https://github.com/chef/libarchive-rust"
description = "A safe Rust API for authoring and extracting archives with libarchive"
keywords = ["libarchive", "archive", "tar", "zip"]
edition = "2021"

[dependencies]
libc = ">= 0.2.0"
libarchive3-sys = { git = "https://github.com/uskrai/libarchive3-sys", rev = "a871830677734c87594053ae43a880d4ae008883" }

[dev-dependencies]
tempfile = "3.3.0"
